--- a/js/package.json
+++ b/js/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "localforage": "^1.5.0",
     "most": "^1.2.2",
     "most-w3msg": "^2.0.0",
-    "p5": "^0.5.8"
+    "p5": "^0.5.8",
+    "snabbdom": "^0.6.7"
   },
   "devDependencies": {
     "browserify": "^14.3.0",
-    "watchify": "^3.9.0"
+    "watchify": "^3.9.0",
+    "budo": "latest"
   }
 }
